Update README with frontend and Java SDK instructions
Added instructions for frontend setup and Java SDK installation.